--- a/templates/primer.html
+++ b/templates/primer.html
@@ -3,15 +3,7 @@
     <br>
     <h2>Análisis de sentimientos</h2>
 
-    <h5>Realizar el análisis con similitud de:</h5>
-    <div class="custom-control custom-radio">
-        <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-        <label class="custom-control-label" for="customRadio1">Coseno</label>
-    </div>
-    <div class="custom-control custom-radio">
-        <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-        <label class="custom-control-label" for="customRadio2">Jaccard</label>
-    </div>
+    <input type="text" name="consulta" id="consulta" placeholder="Inserte su consulta" required>
     <br>
     <center>
         <button type="button" class="btn btn-primary">Aceptar</button></center>
