--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,11 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    color: #238A0A;
+    text-align: center;
+}
+
 #subtitulos {
     color: #F218BA;
     font-size: 20px;
