--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,13 @@
     <link rel=" stylesheet " href="https://use.fontawesome.com/releases/v5.4.2/css/all.css " integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns " crossorigin="anonymous ">
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Rokkitt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 
+
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand">Proyecto</a>
@@ -39,6 +43,7 @@
     </nav>
 
     {% block content %} {% endblock %}
+
 </body>
 <footer>
     <em>&copy; 2020 Análisis de Sentimientos<br/>
