--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,15 +28,18 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    {% block navbar %}{% endblock %}
+                    <!--
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Coseno/Jaccard <span class="sr-only">(current)</span></a>
                     </li>
                     <li>
-                        <a class="nav-link" href="#"> Regresión <span class="sr-only"></span></a>
+                        <a class="nav-link" href="preg3"> Regresión <span class="sr-only"></span></a>
                     </li>
                     <li>
                         <a class="nav-link" href="#"> Librería <span class="sr-only"></span></a>
                     </li>
+                    -->
                 </ul>
             </div>
         </div>
