--- a/templates/resultado3.html
+++ b/templates/resultado3.html
@@ -1,7 +1,27 @@
 {%extends "layout.html" %} {% block content %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand">Proyecto</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Coseno/Jaccard </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Regresión</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Librería<span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <div class="container">
     <br>
-    <b><h2>Análisis de sentimientos</h2></b>
+    <b><h2>Análisis de sentimientos con TextBlob</h2></b>
     <h5><img src="/static/twitter.png" width="50" height="50"> La consulta de tweets se puede realizar hasta 7 días anteriores de la fecha actual. Las consultas son hechas en Ecuador</h5>
     <hr>
     <form method="post" action="/">
@@ -23,6 +43,28 @@
     <b>Desde: </b>{{inicio}}<br>
     <b>Hasta: </b>{{final}}<br>
     <b>Cantidad de tweets: </b>{{cant_tw}}<br>
+
+    <hr>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col"> FECHA</th>
+                <th scope="col">NOMBRE</th>
+                <th scope="col">TWEET</th>
+                <th scope="col">Análisis</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for t in resultado %}
+            <tr>
+                <td> {{t[0]}}</td>
+                <td>{{t[1]}}</td>
+                <td>{{t[2]}}</td>
+                <td>{{t[3][0]}}</td>
+            </tr>
+            {% endfor%}
+        </tbody>
+    </table>
     <hr>
 
 </div>
