--- a/templates/tercera.html
+++ b/templates/tercera.html
@@ -1,14 +1,24 @@
-{%extends "layout.html" %} {% block navbar %}
-<li class="nav-item active">
-    <a class="nav-link" href="/">Coseno/Jaccard <span class="sr-only"></span></a>
-</li>
-<li>
-    <a class="nav-link" href=""> Regresión <span class="sr-only"></span></a>
-</li>
-<li>
-    <a class="nav-link" href="#"> Librería <span class="sr-only">(current)</span></a>
-</li>
-{% endblock %} {% block content %}
+{%extends "layout.html" %} {% block content %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand">Proyecto</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Coseno/Jaccard </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Regresión</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Librería<span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!--##############################-->
 <div class="container">
     <br>
     <b><h2>Análisis de sentimientos</h2></b>
