--- a/templates/primer.html
+++ b/templates/primer.html
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="#">Coseno/Jaccard <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Regresión</a>
+                <a class="nav-link" href="preg2">Regresión</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="preg3">Librería</a>
