--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -95,6 +95,11 @@
                 <td>{{pc[2]}} %</td>
                 <td>{{pj[2]}} %</td>
             </tr>
+            <tr>
+                <td><b>Tiempo de ejecución</b></td>
+                <td>{{ejecucion}}</td>
+                <td>segundos</td>
+            </tr>
         </table>
     </div>
     <div class="col-md-4">
