--- a/templates/resultado3.html
+++ b/templates/resultado3.html
@@ -67,5 +67,22 @@
     </table>
     <hr>
 
+
+
 </div>
+<div class="main row">
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+        <table class="w3-table-all">
+            <tr class="w3-yellow">
+                <td><b>Ejecución</b></td>
+                <td>{{exe_time}} segundos</td>
+            </tr>
+        </table>
+    </div>
+    <div class="col-md-4">
+    </div>
+</div>
+
 <hr> {% endblock %}
