--- a/templates/resultado3.html
+++ b/templates/resultado3.html
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="/">Coseno/Jaccard </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Regresión</a>
+                <a class="nav-link" href="/preg2">Regresión</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Librería<span class="sr-only">(current)</span></a>
@@ -30,9 +30,9 @@
             <br><br>
             <li>Cantidad de Tweets: <input type="number" id="cant" name="cant" value="1" min="0" max="1000" step="1" /></li>
             <br><br>
-            <li>Desde: <input type="date" name="fechainicio" min="2020-06-01" max="2020-06-07" step="1" /></li>
+            <li>Desde: <input type="date" name="fechainicio" step="1" /></li>
             <br><br>
-            <li>Hasta: <input type="date" name="fechafinal" min="2020-06-01" max="2020-06-07" step="1" /></li>
+            <li>Hasta: <input type="date" name="fechafinal" step="1" /></li>
         </ul>
         <center>
             <button type="submit" class="btn btn-primary">Aceptar</button>
